--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,16 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+jar {
+	manifest {
+		attributes "Main-Class": "com.homework.silenteight.SilentEightApplication"
+	}
+
+	from {
+		configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+	}
+}
+
 test {
 	useJUnitPlatform()
 }
